# ColdSnap

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: autopytest.yml  autoruff.yml  autoruff_check.yml  autoruff_format.yml
docs/dev/: requirements.txt
example/: 001_create_models.py  002_load_model.py  003_generate_overview.py
src/coldsnap/: __init__.py  data.py  model.py  serializable.py  utils.py
src/coldsnap/mixins/: __init__.py  model_metrics.py
tests/: conftest.py  test_data.py  test_model.py  test_model_mixins.py  test_regression_evaluation.py  test_serializable.py  test_utils.py
